--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<iframe id="e53b7aab-2154-49d5-b4b5-f2ee268cbe35" src="https://www.vectary.com/viewer/v1/?model=e53b7aab-2154-49d5-b4b5-f2ee268cbe35&env=cloudycliffsideroad&turntable=1" style="background-color: #1e1f24" frameborder="0" width="100%" height="900" scrolling="no"></iframe>
+  <!-- hack for now - look at a way to embed 3d model -->
+  <!-- <iframe id="e53b7aab-2154-49d5-b4b5-f2ee268cbe35" src="https://www.vectary.com/viewer/v1/?model=e53b7aab-2154-49d5-b4b5-f2ee268cbe35&env=cloudycliffsideroad&turntable=1" style="background-color: #1e1f24" frameborder="0" width="100%" height="900" scrolling="no"></iframe> -->
+  <video width="100%" autoplay muted>
+    <source src="final.mov" type="video/mp4">
+  </video>
 </body>
 </html>
