--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html>
-<body>
-  <!-- hack for now - look at a way to embed 3d model -->
-  <!-- <iframe id="e53b7aab-2154-49d5-b4b5-f2ee268cbe35" src="https://www.vectary.com/viewer/v1/?model=e53b7aab-2154-49d5-b4b5-f2ee268cbe35&env=cloudycliffsideroad&turntable=1" style="background-color: #1e1f24" frameborder="0" width="100%" height="900" scrolling="no"></iframe> -->
-  <video width="100%" autoplay muted>
-    <source src="final.mov" type="video/mp4">
-  </video>
+  <html>
+    <head>
+      <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+      <!-- Page 1 -->
+      <div>
+        <!-- hack for now - look at a way to embed 3d model -->
+        <iframe id="e53b7aab-2154-49d5-b4b5-f2ee268cbe35" src="https://www.vectary.com/viewer/v1/?model=e53b7aab-2154-49d5-b4b5-f2ee268cbe35&env=cloudycliffsideroad&turntable=1" style="background-color: #1e1f24" frameborder="0" width="100%" height="900" scrolling="no"></iframe> -->
+        <!-- <video width="100%" height="100%" loop autoplay muted>
+          <source src="final.mov" type="video/mp4">
+        </video> -->
+      </div>
+
+      <!-- Page 2 -->
+      <div style>
+        <h1> About Me </h1>
+        <p> blah blah blah <p>
+        <img src="Picture.jpeg" width="500px" height="500px"/>
+      </div>
 </body>
 </html>
